video playback looks like a negative image Pixel 7
Categories
(Core :: Graphics: WebRender, defect)
Tracking
()
People
(Reporter: RyanVM, Assigned: jnicol)
References
()
Details
Attachments
(2 files)
|
48 bytes,
text/x-phabricator-request
|
Details | Review | |
|
48 bytes,
text/x-phabricator-request
|
phab-bot
:
approval-mozilla-release+
|
Details | Review |
I was previously affected by bug 1866020 and it seems that the bug has returned on my Pixel 7. Not sure if there was a recent system update that broke it or what.
https://www.reddit.com/r/MadeMeSmile/comments/1amvsu8/proper_parenting_at_work/
| Reporter | ||
Comment 1•2 years ago
|
||
The video from bug 1866020 still plays without issue for me, however.
Updated•2 years ago
|
| Assignee | ||
Comment 2•2 years ago
|
||
According to ffprobe this video also has smpte432 color primaries. However, the color space is reported to us as 65800 rather than 10 as for the video in bug 1866020. We currently only apply the workaround if the color space is 10. Updating it to also handle 65800 fixes the bug.
I'm not sure where 65800 comes from, but it appears to be vendor specific which may therefore differ between devices (and possibly android version).
However, I have tested this value is the same on both the Pixel 7 and 8. And this bug should be fixed in the next Android version. So we should be safe to hard code it.
| Assignee | ||
Comment 3•2 years ago
|
||
In bug 1866020 we added a workaround for GLES incorrectly rendering
videos with smpte432 color primaries on some Pixel devices. We enabled
this workaround on affected devices when the color space had a value
of 10.
In this bug we have discovered that some affected videos may
alternatively report their color space as 65800, therefore this patch
additionally applies the workaround in such cases.
Updated•2 years ago
|
| Assignee | ||
Comment 4•2 years ago
|
||
In bug 1866020 we added a workaround for GLES incorrectly rendering
videos with smpte432 color primaries on some Pixel devices. We enabled
this workaround on affected devices when the color space had a value
of 10.
In this bug we have discovered that some affected videos may
alternatively report their color space as 65800, therefore this patch
additionally applies the workaround in such cases.
Original Revision: https://phabricator.services.mozilla.com/D201380
Updated•2 years ago
|
Comment 5•2 years ago
|
||
Uplift Approval Request
- String changes made/needed: N/A
- Code covered by automated testing: no
- Fix verified in Nightly: no
- Is Android affected?: yes
- User impact if declined: Some videos rendered incorrectly on Pixel devices
- Steps to reproduce for manual QE testing: N/A
- Risk associated with taking this patch: Low
- Needs manual QE test: no
- Explanation of risk level: Applies an already shipping workaround to an additional video format. Limited to affected devices.
Comment 7•2 years ago
|
||
| bugherder | ||
Updated•2 years ago
|
Comment 9•2 years ago
|
||
Uplift Approval Request
- Is Android affected?: yes
- Code covered by automated testing: no
- Needs manual QE test: no
- Steps to reproduce for manual QE testing: N/A
- Fix verified in Nightly: yes
- String changes made/needed: N/A
- User impact if declined: Some videos rendered incorrectly on Pixel devices
- Risk associated with taking this patch: Low
- Explanation of risk level: Applies an already shipping workaround to an additional video format. Limited to affected devices.
| Reporter | ||
Updated•2 years ago
|
Updated•2 years ago
|
Updated•2 years ago
|
Comment 10•2 years ago
|
||
| uplift | ||
Description
•