Bug 1879720 - Apply Pixel video color-space workaround to additional color space value. r=media-playback-reviewers,padenot

In bug 1866020 we added a workaround for GLES incorrectly rendering
videos with smpte432 color primaries on some Pixel devices. We enabled
this workaround on affected devices when the color space had a value
of 10.

In this bug we have discovered that some affected videos may
alternatively report their color space as 65800, therefore this patch
additionally applies the workaround in such cases.

Differential Revision: https://phabricator.services.mozilla.com/D201380